--- a/menu/index.html
+++ b/menu/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dropdown</title>
+    <title>Dropdown menu</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    
-       
 </head>
 <body>
     <ul>
